# uitspraken

./: .gitguardian.yml  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_PROJECT.md  README_VISUAL.md
.claude/: launch.json
.github/workflows/: agentic-ci.yml  ci.yml
Schema-Open-Data-voor-de-Rechtspraak/open-rechtspraak/rnc/: open-metadata.rnc  open-rechtspraak.rnc  rechtspraak-1_0.rnc
Schema-Open-Data-voor-de-Rechtspraak/open-rechtspraak/rng/: open-metadata.rng  open-metadata.rng_  open-rechtspraak.rng  rechtspraak-1_0.rng
Schema-Open-Data-voor-de-Rechtspraak/open-rechtspraak/xsd/: bwb.xsd  cvdr.xsd  ecli.xsd  eu.xsd  open-metadata.xsd  open-rechtspraak.xsd  psi.xsd  rdf.xsd  rdfs.xsd  rechtspraak-1_0.xsd  tr.xsd  xlink.xsd
dashboard/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/.claude/: launch.json
dashboard/scripts/: build-pseudo-cache.ts
dashboard/src/app/: layout.tsx  loading.tsx  page.tsx
dashboard/src/components/: AnimatedNumber.tsx  AppealByAreaChart.tsx  AppealByCourtChart.tsx  AppealCourtFlow.tsx  AppealDurationChart.tsx  AppealGevolgBreakdown.tsx  AppealKPICards.tsx  AppealRecentOverturned.tsx  AppealTrendChart.tsx  ChartCard.tsx  (+42 more)
docs/: production-readiness.md
importer/: pyproject.toml
importer/migrations/: 001_initial_schema.sql  002_enrich_schema.sql  003_value_lists.sql  004_ii_performance.sql  005_pseudonymize.sql
importer/rechtspraak/: cli.py  client.py  config.py  crawler.py  database.py  fetcher.py  ii_cache.py  models.py  parser.py  pipeline.py  pseudonymize.py  value_lists.py
(+70 files in other folders)
