[project]
name = "rechtspraak-importer"
version = "0.1.0"
description = "Import Dutch court decisions from Rechtspraak Open Data API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "lxml>=5.3.0",
    "click>=8.1",
    "tqdm>=4.66",
    "tenacity>=8.2",
]

[project.scripts]
rechtspraak = "rechtspraak.cli:cli"
